--- a/index.html
+++ b/index.html
@@ -11,17 +11,29 @@
         <script src="js/smith.js"  type="text/javascript"></script>
     </head>
     <body>
-    
+        <div>
+          <h2>add single point</h2>
+          <label for="real">real: </label>
+          <input type="number" id="real" name="real" value="0">
+          <label for="imaginary">imaginary: </label>
+          <input type="number" id="imaginary" name="imaginary" value="0">
+          <label for="color">color: </label>
+          <input type="text" id="color" name="color" value="black">
+          <button id="add-point">add point</button>
+          <h2>add multiple points</h2>
+          <input id="file" type="file" accept="text/csv">
+        </div>
         <script type="text/javascript">  
             ////////// draw the dang chart /////////////
             
-            var svg = d3.select("body").append('svg')
-            chart = new smith.chart()
+            var svg = d3.select("body").append('svg');
+            chart = new smith.chart();
             // set chart options
-            chart.radius = 1
-            chart.type = 'z'
+            chart.radius = 1;
+            chart.type = 'z';
             // draw chart
-            chart.draw(svg)
+            chart.draw(svg);
+            chartDrawn();
         </script>
     </body>
 </html>
